make navbar scroll

--- a/about.html
+++ b/about.html
@@ -702,12 +702,14 @@
         sidebar.classList.remove("translate-x-full");
         sidebar.classList.add("translate-x-0");
         overlay.classList.remove("hidden");
+        document.body.classList.add("no-scroll"); // Disable body scrolling
       });
 
       closeBtn.addEventListener("click", () => {
         sidebar.classList.remove("translate-x-0");
         sidebar.classList.add("translate-x-full");
         overlay.classList.add("hidden");
+        document.body.classList.remove("no-scroll"); // Enable body scrolling again
       });
 
       // Close the sidebar and overlay when clicking on the overlay
@@ -715,6 +717,7 @@
         sidebar.classList.remove("translate-x-0");
         sidebar.classList.add("translate-x-full");
         overlay.classList.add("hidden");
+        document.body.classList.remove("no-scroll"); // Enable body scrolling again
       });
     </script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
