--- a/carrer.html
+++ b/carrer.html
@@ -1027,7 +1027,7 @@
         </div>
       </div>
     </footer>
-    <script>
+     <script>
       const openBtn = document.getElementById("open-btn");
       const closeBtn = document.getElementById("close-btn");
       const sidebar = document.getElementById("sidebar");
@@ -1037,12 +1037,14 @@
         sidebar.classList.remove("translate-x-full");
         sidebar.classList.add("translate-x-0");
         overlay.classList.remove("hidden");
+        document.body.classList.add("no-scroll"); // Disable body scrolling
       });
 
       closeBtn.addEventListener("click", () => {
         sidebar.classList.remove("translate-x-0");
         sidebar.classList.add("translate-x-full");
         overlay.classList.add("hidden");
+        document.body.classList.remove("no-scroll"); // Enable body scrolling again
       });
 
       // Close the sidebar and overlay when clicking on the overlay
@@ -1050,6 +1052,7 @@
         sidebar.classList.remove("translate-x-0");
         sidebar.classList.add("translate-x-full");
         overlay.classList.add("hidden");
+        document.body.classList.remove("no-scroll"); // Enable body scrolling again
       });
     </script>
     <script>
