--- a/skin&dermatology.html
+++ b/skin&dermatology.html
@@ -1066,12 +1066,14 @@
         sidebar.classList.remove("translate-x-full");
         sidebar.classList.add("translate-x-0");
         overlay.classList.remove("hidden");
+        document.body.classList.add("no-scroll"); // Disable body scrolling
       });
 
       closeBtn.addEventListener("click", () => {
         sidebar.classList.remove("translate-x-0");
         sidebar.classList.add("translate-x-full");
         overlay.classList.add("hidden");
+        document.body.classList.remove("no-scroll"); // Enable body scrolling again
       });
 
       // Close the sidebar and overlay when clicking on the overlay
@@ -1079,6 +1081,7 @@
         sidebar.classList.remove("translate-x-0");
         sidebar.classList.add("translate-x-full");
         overlay.classList.add("hidden");
+        document.body.classList.remove("no-scroll"); // Enable body scrolling again
       });
     </script>
     <script>
