--- a/carrer.html
+++ b/carrer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nebula vets</title>
+    <title>Nebula vets Carrer</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link
       rel="shortcut icon"
@@ -1027,7 +1027,7 @@
         </div>
       </div>
     </footer>
-     <script>
+    <script>
       const openBtn = document.getElementById("open-btn");
       const closeBtn = document.getElementById("close-btn");
       const sidebar = document.getElementById("sidebar");
