--- a/location.html
+++ b/location.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nebula vets</title>
+    <title>Nebula vets Location</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link
       rel="shortcut icon"
@@ -198,7 +198,7 @@
         <div
           class="max-w-[1360px] md:px-10 mx-auto pt-15 md:pt-20 pb-[120px] md:pb-[140px] relative z-[1]"
         >
-          <div class="flex items-center max-md:flex-wrap-reverse">
+          <div class="flex items-center max-md:flex-wrap-reverse gap-4">
             <div
               data-aos-once="true"
               data-aos="fade-right"
