--- a/sevices.html
+++ b/sevices.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nebula vets</title>
+    <title>Nebula vets Services</title>
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link
       rel="shortcut icon"
