--- a/vaccination.html
+++ b/vaccination.html
@@ -28,7 +28,7 @@
         height: 10px;
       }
     </style>
-    <title>Nebula Vets</title>
+    <title>Nebula Vets Vaccinations</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
